Fixed an unset overflow x for large desktop screens only

--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,12 @@ main {
 	overflow-x: hidden;
 }
 
+@media only screen and (min-width: 112.5em) {
+	main {
+		overflow-x: unset;
+	}
+}
+
 html {
 	font-size: 62.5%;
 	font-family: "Roboto", sans-serif;
